--- a/style.css
+++ b/style.css
@@ -23,7 +23,9 @@ ul, ol {margin: 1em 0 1.4em 24px;	padding: 0;	line-height: 140%;}
 li {margin: 0 0 .5em 0;	padding: 0;}
 /* headings */
 h1, h2, h3, h4, h5, h6 {	line-height: 1.4em;margin: 20px 0 .4em;	color: #000;}
-h1 {font-size: 2.2em;}
+h1 {
+	font-size: 2.2em;
+	font-family: "Comic Sans MS", cursive;}
 h2 {font-size: 1.8em;}
 h3 {font-size: 1.6em;}
 h4 {font-size: 1.4em;}
